--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_marginBottom="6dp"
+
+
     android:layout_marginTop="2dp"
-    app:cardCornerRadius="5dp"
-    app:elevation="1dp">
+
+    app:elevation="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,59 +26,58 @@
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@mipmap/book" />
 
             <TextView
-                android:id="@+id/text_content"
+                android:id="@+id/text_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:paddingLeft="30dp"
+                android:paddingLeft="5dp"
                 android:text="测试测试测试测试测试测试" />
 
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/image_gif"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@mipmap/ic_launcher" />
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_height="190dp"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button_like"
+            <ImageView
+                android:id="@+id/book_one"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="190dp"
                 android:layout_weight="1"
-                android:text="赞" />
+                android:src="@mipmap/bookbg" />
 
-            <Button
-                android:id="@+id/button_dislike"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="反对" />
+            <ImageView
+                android:id="@+id/book_two"
 
-            <Button
-                android:id="@+id/button_share"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="190dp"
                 android:layout_weight="1"
-                android:text="分享" />
+                android:src="@mipmap/bookbg" />
 
-            <Button
-                android:id="@+id/button_comment"
+            <ImageView
+                android:id="@+id/book_three"
+
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="190dp"
                 android:layout_weight="1"
-                android:text="评论" />
+                android:src="@mipmap/bookbg" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/button_more"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="查看" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
