--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent">
-     <include layout="@layout/toolbar" />
-    <FrameLayout
+   <!-- <include layout="@layout/toolbar" />-->
+    <LinearLayout
         android:id="@+id/main_fragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:orientation="vertical"
+        android:layout_height="match_parent">
 
-    </FrameLayout>
 
+    </LinearLayout>
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
         android:id="@+id/bottom_navigation_bar"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:bnbAutoHideEnabled="true"
         android:layout_gravity="bottom" />
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
