--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -3,16 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
-    <!-- <include layout="@layout/toolbar" />-->
+     <include layout="@layout/toolbar" />
 
     <android.support.v4.widget.SwipeRefreshLayout
+
         android:id="@+id/SwipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <android.support.v7.widget.RecyclerView
+            android:layout_marginTop="58dp"
             android:id="@+id/recyclerView_gif"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
