--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-   <!-- <include layout="@layout/toolbar" />-->
+    android:orientation="vertical"
+    android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/SwipeRefreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_gif"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        </android.support.v7.widget.RecyclerView>
-
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+    <TextView
+        android:id="@+id/tv"
+        android:layout_width="wrap_content"
+        android:paddingBottom="30dp"
+        android:layout_height="wrap_content"
+        android:text="这山谷(1)在assets中新建文件夹fonts，把ttf字体库考到目录下
+(2)使用代码
+[java] view plain copy
+TextView view1 = (TextView) findViewById(R.id.tv1);
+Typeface tf1 = Typeface.createFromAsset(getAssets()," />
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="这山谷(1)在assets中新建文件夹fonts，把ttf字体库考到目录下
+(2)使用代码
+[java] view plain copy
+TextView view1 = (TextView) findViewById(R.id.tv1);
+Typeface tf1 = Typeface.createFromAsset(getAssets()," />
+</LinearLayout>
