--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <!-- <include layout="@layout/toolbar" />-->
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/main_fragment"
         android:layout_width="match_parent"
-        android:orientation="vertical"
         android:layout_height="match_parent">
-
-
-    </LinearLayout>
+    </FrameLayout>
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
         android:id="@+id/bottom_navigation_bar"
         android:layout_width="match_parent"
