--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/linearLayout_root"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -34,15 +35,6 @@
             android:src="@drawable/image_up_button_selector" />
 
         <ImageButton
-            android:id="@+id/music_play"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            android:src="@drawable/image_button_selector" />
-
-        <ImageButton
             android:id="@+id/music_next"
             android:layout_width="80dp"
             android:layout_height="80dp"
@@ -50,6 +42,14 @@
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/image_next_button_selector" />
+        <ImageButton
+            android:id="@+id/music_play"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@drawable/image_button_pause_selector" />
     </RelativeLayout>
 
 </LinearLayout>
