--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -1,30 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/linearLayout_root"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
+
         android:id="@+id/music_all"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4">
+
+
         <ImageButton
+            android:id="@+id/red_music_bg"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_height="match_parent"
+            android:layout_margin="40dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/playing_cover_lp" />
+        <ImageButton
+            android:id="@+id/music_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="40dp"
+            android:background="@android:color/transparent"
+            android:scaleType="fitCenter"
+            android:src="@mipmap/playing_lp" />
+
+        <RelativeLayout
+            android:gravity="right"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="12dp"
+            android:layout_alignTop="@+id/red_music_bg"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="16dp"
+            android:layout_marginEnd="16dp">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/playing_stylus_lp_bg" />
+
+            <ImageButton
+                android:id="@+id/needle_lp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/needle_shadow2" />
+
+            <ImageButton
+                android:id="@+id/stylus_lp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/playing_stylus_lp" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@mipmap/playing_stylus_lp_top" />
+
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_marginBottom="58dp"
         android:id="@+id/image_button"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="bottom"
+        android:layout_marginBottom="58dp"
         android:layout_weight="1"
-        android:gravity="center"
-       >
+        android:gravity="center">
 
         <ImageButton
             android:id="@+id/music_pre"
@@ -42,6 +100,7 @@
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
             android:src="@drawable/image_next_button_selector" />
+
         <ImageButton
             android:id="@+id/music_play"
             android:layout_width="80dp"
